--- a/package.json
+++ b/package.json
@@ -19,12 +19,16 @@
   },
   "homepage": "https://github.com/Bridge-Application/bridge-backend#readme",
   "dependencies": {
-    "axios": "^0.19.2",
+    "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
     "crypto-js": "^4.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "filereader": "^0.10.3",
+    "form-data": "^3.0.0",
+    "formidable": "^1.2.2",
     "mongoose": "^5.9.28",
+    "node-fetch": "^2.6.1",
     "validator": "^13.1.1"
   }
 }
